--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <body>
 
 <header>
-    <img src="LOGO.docx.jpg" alt="Logo de GS Abogados">
+    <img src="Logotipo.docx.jpg" alt="Logo de GS Abogados">
     <h1>GS Abogados - Derecho Comercial</h1>
 </header>
 
