--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+<head><head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GS Abogados - Derecho Comercial</title>
@@ -67,7 +70,49 @@
             border: none;
             cursor: pointer;
         }
-    </style>
+    </style><style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f4;
+        color: #333;
+    }
+    header {
+        background-color: #004080; /* Azul mar */
+        color: white;
+        padding: 1em 0;
+        text-align: center;
+    }
+    nav {
+        display: flex;
+        justify-content: center;
+        background-color: #e60000; /* Rojo */
+        padding: 0.5em 0;
+    }
+    nav a {
+        color: white;
+        margin: 0 1em;
+        text-decoration: none;
+        font-weight: bold;
+    }
+    .container {
+        width: 80%;
+        margin: auto;
+        overflow: hidden;
+    }
+    section {
+        padding: 2em 0;
+        border-bottom: 1px solid #ccc;
+    }
+    footer {
+        background-color: #004080; /* Azul mar */
+        color: white;
+        text-align: center;
+        padding: 1em 0;
+    }
+</style>
+
 </head>
 <body>
 
